--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -34,6 +34,9 @@
 					<p *ngIf="loginErrorMessage">{{loginErrorMessage}}</p>
 				</form>
 			</div>
+			<p>Admin: 	admin01@admin.com 
+				pass :123456
+			</p>
 			<div class="card-footer">
 				<div class="d-flex justify-content-center links">
 					Don't have an account? <a (click)="Relogin()">Sign Up</a>
