--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -21,6 +21,7 @@
             <div class="col-md-4 col-sm-12"> 
                 <div class="row">
                         <div class="shopCart"  *ngIf="cart$ | async as cart">
+                           <ng-container *ngIf="cart">
                            <p>Order Summery</p>
                             <hr>
                             <div class="summery-Body">
@@ -42,10 +43,11 @@
                                     Check Out
                                 </button>
                             </div>
+                        </ng-container>
                         </div>
-
+                  
                 </div>
-
+           
             </div>
   
         </div>
