--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -15,7 +15,7 @@
     <hr>
     <div class="row">
         <div class="col-sm-7">
-            <img src="../../assets/14.jpg">
+            <img src="assets/14.jpg">
         </div>
         <div class="col-sm-5">
             <h3>
