--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -97,7 +97,7 @@
             <div class="col-lg-5">
                 <div class="image">
                     <img style="width: 80%;"
-                    src="../../assets/502.png">
+                    src="assets/502.png">
                  </div>
             </div>
             <div class="col-lg-7"> 
@@ -134,7 +134,7 @@
             <div class="col-lg-5"> 
                 <div class="image">
                     <img style="width: 80%;"
-                src="../../assets/50.jpg">
+                src="assets/50.jpg">
                 </div>
             </div>
         </div>
@@ -142,7 +142,7 @@
             <div class="col-lg-5">
                 <div class="image">
                     <img style="width: 80%;"
-                    src="../../assets/501.jpg">
+                    src="assets/501.jpg">
                 </div>
             </div>
             <div class="col-lg-7"> 
@@ -156,8 +156,7 @@
                         pencil skirt,  Unfortunately, they don’t always come to mind as you’re writing. 
                         Not to worry.I collected them for myself and will share them with you.
                          Please add any others you use in your writing. There’s no way my list can be exhaustive
-                          when we’re discussing women’s outfits.    
-                    
+                         when we’re discussing women’s outfits.    
                     </p>
                 </div>
                 
