--- a/src/app/card/cart-items/cart-items.component.html
+++ b/src/app/card/cart-items/cart-items.component.html
@@ -1,5 +1,6 @@
 
-<ng-container *ngIf="cart$ | async as cart;else noItem">
+<div *ngIf="cart$ | async as cart;else noItem">
+    <ng-container *ngIf="(cart.getTotlCount != 0 && cart.getTotlCount != null);else nocartselect">
     <div class="row">
     <h3>Shopping Cart</h3>
     <hr class="under-title">
@@ -132,7 +133,19 @@
     </button>
 </div>
 </ng-container>
+<ng-template #nocartselect>
+    <div>
+        <h3>Shopping Cart</h3>
+        <hr>
+        <h5>Items (0) </h5> 
+        <div class="alert alert-warning"  role="alert">
+            <h5> Shopping Cart is Empty...  </h5>  
+          </div> 
+    </div>
+               
 
+</ng-template>
+</div>
 <ng-template #noItem>
     <div>
         <h3>Shopping Cart</h3>
