--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -33,22 +33,22 @@
                        <h4>INSTAGRAM</h4>
                       <div class="images">
                           <div>
-                            <img src="../../assets/14.jpg">
+                            <img src="assets/14.jpg">
                           </div>
                           <div>
-                            <img src="../../assets/12.jpg">
+                            <img src="assets/12.jpg">
                           </div>
                           <div>
-                            <img src="../../assets/13.jpg">
+                            <img src="assets/13.jpg">
                           </div>
                           <div>
-                            <img src="../../assets/18.jpg">
+                            <img src="assets/18.jpg">
                           </div>
                           <div>
-                            <img src="../../assets/15.jpg">
+                            <img src="assets/15.jpg">
                           </div>
                           <div>
-                            <img src="../../assets/17.jpg">
+                            <img src="assets/17.jpg">
                           </div>
                       </div>        
                 </div>
